@@ -130,7 +130,6 @@ module Fairy
 	unless bt.empty?
 	  bt.first.sub!("bind", @block_source.caller_method)
 	end
-	bt.first.sub!("bind", @block_source.caller_method)
 	bt.push *@block_source.backtrace.dc_deep_copy
 	$!.set_backtrace(bt)
 
